Improve gas metallicity section

--- a/colibre/auto_plotter/metallicity.yml
+++ b/colibre/auto_plotter/metallicity.yml
@@ -28,7 +28,7 @@ stellar_mass_gas_sf_metallicity_fromz_lom_30:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (log-of-mean, from Z, 30 kpc aperture)"
     caption: Only shown for star forming galaxies. Computed as the average mass-weighted metal mass fraction (converted to 12 + $\log_{10}$ O/H by assuming solar abundance patterns) of cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -65,7 +65,7 @@ stellar_mass_gas_sf_metallicity_fromz_lom_100:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (log-of-mean, from Z, 100 kpc aperture)"
     caption: Only shown for star forming galaxies. Computed as the average mass-weighted metal mass fraction (converted to 12 + $\log_{10}$ O/H by assuming solar abundance patterns) of cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: true
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -102,7 +102,7 @@ stellar_mass_gas_sf_metallicity_lom_30:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (log-of-mean, 30 kpc aperture)"
     caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where O/H is linearly averaged for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -139,7 +139,7 @@ stellar_mass_gas_sf_metallicity_lom_100:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (log-of-mean, 100 kpc aperture)"
     caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where O/H is linearly averaged for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: true
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -174,9 +174,9 @@ stellar_mass_gas_sf_metallicity_total_lom_30:
       value: 1e12
       units: solar_mass
   metadata:
-    title: "Stellar mass - Gas total metallicity relation (log-of-mean, 30 kpc aperture)"
-    caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where O/H is linearly averaged for total O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    title: "Stellar mass - Gas (Diffuse + Dust) metallicity relation (log-of-mean, 30 kpc aperture)"
+    caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where O/H is linearly averaged for total O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses undepleted gas metallicity, i.e. it includes metals that are present in dust.
+    section: Gas Metallicity
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -211,9 +211,9 @@ stellar_mass_gas_sf_metallicity_total_lom_100:
       value: 1e12
       units: solar_mass
   metadata:
-    title: "Stellar mass - Gas total metallicity relation (log-of-mean, 100 kpc aperture)"
-    caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where O/H is linearly averaged for total O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    title: "Stellar mass - Gas (Diffuse + Dust) metallicity relation (log-of-mean, 100 kpc aperture)"
+    caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where O/H is linearly averaged for total O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses undepleted gas metallicity, i.e. it includes metals that are present in dust.
+    section: Gas Metallicity
     show_on_webpage: true
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -250,7 +250,7 @@ stellar_mass_gas_sf_metallicity_mol_lowfloor_30:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (mean-of-log, 30 kpc aperture)"
     caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-4 floor and diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -287,7 +287,7 @@ stellar_mass_gas_sf_metallicity_mol_lowfloor_100:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (mean-of-log, 100 kpc aperture)"
     caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-4 floor and diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: true
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -324,7 +324,7 @@ stellar_mass_gas_sf_metallicity_mol_hifloor_30:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (mean-of-log, 30 kpc aperture)"
     caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -361,7 +361,7 @@ stellar_mass_gas_sf_metallicity_mol_hifloor_100:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (mean-of-log, 100 kpc aperture)"
     caption: Only shown for star forming galaxies. Represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: true
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -398,7 +398,7 @@ stellar_mass_gas_sf_metallicity_lom_allgals_30:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (log-of-mean, 30 kpc aperture)"
     caption: Only shown for galaxies with cold, dense gas. Represented by 12 + $\log_{10}$ O/H (where O/H is linearly averaged for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
@@ -435,81 +435,7 @@ stellar_mass_gas_sf_metallicity_lom_allgals_100:
   metadata:
     title: "Stellar mass - Gas diffuse metallicity relation (log-of-mean, 100 kpc aperture)"
     caption: Only shown for galaxies with cold, dense gas. Represented by 12 + $\log_{10}$ O/H (where O/H is linearly averaged for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
-    show_on_webpage: true
-  observational_data:
-    - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
-    - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
-    - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
-
-stellar_mass_gas_sf_metallicity_30:
-  type: "scatter"
-  legend_loc: "upper left"
-  selection_mask: "derived_quantities.is_active_30_kpc"
-  comment: "Active only"
-  y:
-    quantity: "derived_quantities.gas_o_abundance_avglin_30_kpc"
-    log: false
-    units: "dimensionless"
-    start: 7
-    end: 10
-  x:
-    quantity: "apertures.mass_star_30_kpc"
-    units: solar_mass
-    start: 1e6
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 30
-    start:
-      value: 1e6
-      units: solar_mass
-    end:
-      value: 1e12
-      units: solar_mass
-  metadata:
-    title: "Stellar mass - Gas metallicity relation (30 kpc aperture)"
-    caption: Only shown for star forming galaxies. Computed as the average mass-weighted metal mass fraction (displayed as 12 + $\log_{10}$ O/H) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
-    show_on_webpage: false
-  observational_data:
-    - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
-    - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
-    - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
-
-stellar_mass_gas_sf_metallicity_100:
-  type: "scatter"
-  legend_loc: "upper left"
-  selection_mask: "derived_quantities.is_active_100_kpc"
-  comment: "Active only"
-  y:
-    quantity: "derived_quantities.gas_o_abundance_avglin_100_kpc"
-    log: false
-    units: "dimensionless"
-    start: 7
-    end: 10
-  x:
-    quantity: "apertures.mass_star_100_kpc"
-    units: solar_mass
-    start: 1e6
-    end: 1e12
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 30
-    start:
-      value: 1e6
-      units: solar_mass
-    end:
-      value: 1e12
-      units: solar_mass
-  metadata:
-    title: "Stellar mass - Gas metallicity relation (100 kpc aperture)"
-    caption: Only shown for star forming galaxies. Computed as the average mass-weighted metal mass fraction (displayed as 12 + $\log_{10}$ O/H) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: SF Gas Metallicity
+    section: Gas Metallicity
     show_on_webpage: true
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
