--- a/colibre/auto_plotter/metallicity.yml
+++ b/colibre/auto_plotter/metallicity.yml
@@ -536,7 +536,7 @@ stellar_mass_star_fe_over_h_mol_lofloor_100:
   metadata:
     title: "Stellar mass - Star metallicity (Fe/H) relation (mean-of-log, 100 kpc aperture)"
     section: Stellar Metallicity
-    caption: Computed as the mass-weighted average of log stellar metal mass fraction (displayed as [Fe/H]). The floor value is set to [Fe/H]=-4. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    caption: Computed as the mass-weighted average of log stellar metal mass fraction (displayed as [Fe/H]). The floor value is set to [Fe/H]=-4. All haloes are plotted, including subhaloes.
   observational_data:
     - filename: GalaxyStellarMassStellarMetallicity/Gallazzi2005_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
@@ -569,7 +569,7 @@ stellar_mass_star_fe_over_h_mol_hifloor_100:
   metadata:
     title: "Stellar mass - Star metallicity (Fe/H) relation (mean-of-log, 100 kpc aperture)"
     section: Stellar Metallicity
-    caption: Computed as the mass-weighted average of log stellar metal mass fraction (displayed as [Fe/H]). The floor value is set to [Fe/H]=-3. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    caption: Computed as the mass-weighted average of log stellar metal mass fraction (displayed as [Fe/H]). The floor value is set to [Fe/H]=-3. All haloes are plotted, including subhaloes.
   observational_data:
     - filename: GalaxyStellarMassStellarMetallicity/Gallazzi2005_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
@@ -602,7 +602,7 @@ stellar_mass_star_fe_over_h_lom_100:
   metadata:
     title: "Stellar mass - Star metallicity (Fe/H) relation (100 kpc aperture)"
     section: Stellar Metallicity
-    caption: Computed as the mass-weighted average of stellar metal mass fraction (displayed as [Fe/H]). All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    caption: Computed as the mass-weighted average of stellar metal mass fraction (displayed as [Fe/H]). All haloes are plotted, including subhaloes.
   observational_data:
     - filename: GalaxyStellarMassStellarMetallicity/Gallazzi2005_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
